<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ConsultaIndividual">

    <TextView
        android:id="@+id/viewCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_cedula" />

    <EditText
        android:id="@+id/txtCedula"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewCedula"
        android:inputType="number" />

    <TextView
        android:id="@+id/viewNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_nombres" />

    <EditText
        android:id="@+id/txtNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewNombres"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/viewApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_apellidos" />

    <EditText
        android:id="@+id/txtApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewApellidos"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/viewDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_direccion" />

    <EditText
        android:id="@+id/txtDireccion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewDireccion"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/viewTipocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_tipocar" />

    <EditText
        android:id="@+id/txtTipocar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewTipocar"
        android:inputType="textPersonName" />


    <TextView
        android:id="@+id/viewCorp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hint_corp" />

    <EditText
        android:id="@+id/txtCorp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:labelFor="@+id/viewCorp"
        android:inputType="textPersonName" />



</LinearLayout>